clase-4 | selectores en css

--- a/clase-3-29-4-2025/consigna/styles.css
+++ b/clase-3-29-4-2025/consigna/styles.css
@@ -56,3 +56,20 @@ section {
 a:hover {
   color: red;
 }
+
+/* Selector multiple */
+input,
+textarea {
+  border-radius: 10px;
+  padding: 10px;
+  display: block;
+}
+
+form button {
+  background-color: tomato;
+  color: brown;
+}
+
+footer {
+  text-align: center;
+}
