clase 24 - forms, ejercicio en clase

--- a/clase-23-10-7-2025/src/index.css
+++ b/clase-23-10-7-2025/src/index.css
@@ -46,6 +46,14 @@ header nav a:hover {
   text-decoration: underline;
 }
 
+main {
+  min-height: 70vh;
+}
+
+.dashboard-content {
+  padding: 20px;
+}
+
 /* Banner */
 .banner {
   text-align: center;
