--- a/clase-24-15-7-2025/src/main.css
+++ b/clase-24-15-7-2025/src/main.css
@@ -1,9 +1,31 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .cont-colors {
   display: flex;
+  gap: 20px;
+}
+
+.cont-emotion {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  margin-top: 30px;
   gap: 20px;
 }
 
 .check-color {
   width: 300px;
   height: 300px;
+}
+
+.emotion-color {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  color: transparent;
 }
